# cereal

./: .gitignore  components.json  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  plan.md  tailwind.config.js  tsconfig.node.json  tsconfig.web.json
resources/models/: README.md
scripts/: build-transcriber-helper.mjs  prepare-electron-sqlite.mjs
src/main/: audio-capture.ts  database.ts  index.ts  ipc.ts  live-transcription.ts  meeting-detector.ts  meeting-prefs.ts  meeting-store.test.ts  meeting-store.ts  native.ts  transcriber-client.ts  tray.ts
src/native/: CMakeLists.txt
src/native/audio-capture/: CMakeLists.txt  audio_capture_addon.h  audio_capture_addon.mm  meeting_detector.h  meeting_detector.mm  mic_capturer.h  mic_capturer.mm  screen_audio_capturer.h  screen_audio_capturer.mm  window_title_matcher.h  window_title_matcher.mm
src/native/hello/: CMakeLists.txt  hello_addon.h  hello_addon.mm
src/native/transcriber-helper/: Package.resolved  Package.swift
src/native/transcriber-helper/Sources/TranscriberHelper/: Protocol.swift  WhisperPipeline.swift  main.swift
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  env.d.ts  index.css  main.tsx
src/shared/: ipc-types.ts  meeting-types.ts
